--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+body{
+  background-image: url(https://img.redbull.com/images/c_crop,x_0,y_74,h_1024,w_2560/c_fill,w_1430,h_530/q_auto,f_auto/redbullcom/2015/12/27/1331767414211_2/star-wars-spaceships-death-star);
+  background-size: 100%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+  margin: 30px;
+  font-size: 2rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header nav{
+  width: 150px;
+  display: inline-block;
+  background-color: rgba(171, 171, 171, .25);
+  border-radius: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+header nav a{
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+}
+section{
+  width: 50%;
+  display: inline-block;
+}
+section form{
+  width: 50%;
+  display: inline-block;
+  text-align: left;
+  background-color: rgba(171, 171, 171, .25);
+  padding: 5%;
+}
+section label{
+  width: 80px;
+  color: white;
+  display: inline-block;
+  margin-right: 5%;
+}
+section form input, section form select{
+  margin-right: 20%;
+  margin-bottom: 3%;
+}
+main{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main a{
+  color: limegreen;
+  text-decoration: none;
 }
